# patents-mcp

./: .gitignore  README.md  pyproject.toml
src/patent_mcp_server/: config.py  constants.py  patents.py
src/patent_mcp_server/google/: bigquery_client.py
