[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-mcp-server"
version = "0.2.3"
description = "Model Context Protocol server for USPTO patent data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.0",
    "python-dotenv>=1.0.1",
    "google-cloud-bigquery>=3.13.0",
    "google-auth>=2.23.0",
    "db-dtypes>=1.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["patent_mcp_server", "patent_mcp_server.uspto", "patent_mcp_server.util", "patent_mcp_server.google"]

[tool.setuptools.package-data]
patent_mcp_server = ["json/*.json"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]

[project.scripts]
patent-mcp-server = "patent_mcp_server.patents:main"
